# walking-man

./: CMakeLists.txt  FindODE.cmake  data.txt  main.cpp  modeler.h  sin_torque.h
